fixed skills on mobile, added more techs

--- a/app/skills/skills.module.css
+++ b/app/skills/skills.module.css
@@ -52,7 +52,8 @@
         justify-items: stretch;
         align-content: space-evenly;
         grid-template-columns: 1fr;
-        grid-auto-rows: 1fr;
+        grid-template-rows: 1fr;
+        grid-auto-rows: auto;
         gap: 1rem;
         align-items: stretch;
     }
